--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-material": "^1.0.0-beta-11"
+    "vue-material": "^1.0.0-beta-11",
+    "vue-router": "^3.0.7",
+    "vuelidate": "^0.7.4",
+    "webpack": "^4.35.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
