--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.4.2",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.7",
     "vuelidate": "^0.7.4",
