--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-carousel": "^0.18.0",
     "vue-material": "^1.0.0-beta-11",
     "vue-router": "^3.0.7",
     "vuelidate": "^0.7.4",
